refactor: add logo and add it to infex.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header>
+        <img class="logo" src="./assets/img/Vector.png" alt="logo" width="50px" height="40px">
         // здесь должен быть логотип
         <nav class="nav">
             <ul class="nav-list">
