--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./assets/img/icon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Merriweather:wght@700&display=swap" rel="stylesheet">
@@ -13,7 +14,6 @@
 <body>
     <header>
         <img class="logo" src="./assets/img/Vector.png" alt="logo" width="50px" height="40px">
-        // здесь должен быть логотип
         <nav class="nav">
             <ul class="nav-list">
               <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
@@ -23,5 +23,6 @@
           </nav>
           // switch ng
     </header>
+    <script src="./index.js"></script>
 </body>
 </html>
