feat: add new logo and code to footer

--- a/index.html
+++ b/index.html
@@ -12,17 +12,55 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <header>
-        <img class="logo" src="./assets/img/Vector.png" alt="logo" width="50px" height="40px">
-        <nav class="nav">
-            <ul class="nav-list">
-              <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-              <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
-              <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-            </ul>
-          </nav>
+    <header class="header-container">
+        <div class="container">
+            <img class="logo" src="./assets/img/Vector.png" alt="logo" width="50px" height="40px">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#Skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#Portfolio" class="nav-link">Portfolio</a></li>
+                    <li class="nav-item"><a href="#Video" class="nav-link">Video</a></li>
+                    <li class="nav-item"><a href="#Price" class="nav-link">Price</a></li>
+                    <li class="nav-item"><a href="#Contacts" class="nav-link">Contacts</a></li>
+                </ul>
+            </nav>
+        </div>
           // switch ng
     </header>
+    <main class="main-container">
+        <div class="container">
+            <section class="hero">
+                <h1>Alexa Rise</h1>
+            </section>
+            <section class="skills">
+                <h2 class="section-title">Skills</h2>
+            </section>
+            <section class="portfolio">
+                <h2 class="section-title">Portfolio</h2>
+            </section>
+            <section class="video">
+                <h2 class="section-title">Video</h2>
+            </section>
+            <section class="price">
+                <h2 class="section-title">Price</h2>
+            </section>
+            <section class="contacts">
+                <h2 class="section-title">Contacts</h2>
+            </section>
+        </div>
+    </main>
+    <footer class="footer-container">
+        <div class="container">
+            <a href="https://rs.school/js/"><b>MADE WITH</b>
+                <img src="./assets/svg/rs_school_js.svg" alt="Rsschool Icon" width="73" height="26">
+            </a>
+
+            <a href="https://github.com/WetaMilovanova"><b>VISIT MY</b>
+                <img src="./assets/svg/github2.svg" alt="GitHub Icon" width="26" height="26">
+            </a>
+            <p><b>&copy; 2022</b></p>
+        </div>
+    </footer>
     <script src="./index.js"></script>
 </body>
 </html>
