--- a/index.html
+++ b/index.html
@@ -24,17 +24,45 @@
                     <li class="nav-item"><a href="#Contacts" class="nav-link">Contacts</a></li>
                 </ul>
             </nav>
+            /*en/ru
         </div>
-          // switch ng
     </header>
+
     <main class="main-container">
         <div class="container">
             <section class="hero">
-                <h1>Alexa Rise</h1>
+                <div class="container-hero">
+                    <h1 class="hero-title">Alexa Rise</h1>
+                    <p class="hero-text">Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise</p>
+                    <button class="hero-button">Hire me</button>
+                </div>
             </section>
+
+            
             <section class="skills">
                 <h2 class="section-title">Skills</h2>
+                <div class="skill-item">
+                    <img src="./assets/svg/camera.svg" alt="camera icon">
+                    <p>Digital photography</p>
+                    <p>High-quality photos in the studio and on the nature</p>
+                </div>
+                <div class="skills-item-2">
+                    <img src="./assets/svg/video.svg" alt="video icon">
+                    <p>Video shooting</p>
+                    <p>Capture your moments so that they always stay with you</p>
+                </div>
+                <div class="skills-item-3">
+                    <img src="./assets/svg/picture.svg" alt="picture icon">
+                    <p>Retouch</p>
+                    <p>I strive to make photography surpass reality</p>
+                </div>
+                <div class="skills-item-4">
+                    <img src="./assets/svg/mic.svg" alt="mic icon">
+                    <p>Audio</p>
+                    <p>Professional sounds recording for video, advertising, portfolio</p>
+                </div>
             </section>
+
             <section class="portfolio">
                 <h2 class="section-title">Portfolio</h2>
             </section>
@@ -51,13 +79,6 @@
     </main>
     <footer class="footer-container">
         <div class="container">
-            <a href="https://rs.school/js/"><b>MADE WITH</b>
-                <img src="./assets/svg/rs_school_js.svg" alt="Rsschool Icon" width="73" height="26">
-            </a>
-
-            <a href="https://github.com/WetaMilovanova"><b>VISIT MY</b>
-                <img src="./assets/svg/github2.svg" alt="GitHub Icon" width="26" height="26">
-            </a>
             <p><b>&copy; 2022</b></p>
         </div>
     </footer>
