--- a/index.html
+++ b/index.html
@@ -38,50 +38,89 @@
                 </div>
             </section>
 
-            
+
             <section class="skills">
-                <h2 class="section-title">Skills</h2>
-                <div class="skill-item">
-                    <img src="./assets/svg/camera.svg" alt="camera icon">
-                    <p>Digital photography</p>
-                    <p>High-quality photos in the studio and on the nature</p>
+                <div class="section-title">
+                    <h2 class="text-title">Skills</h2>
                 </div>
-                <div class="skills-item-2">
-                    <img src="./assets/svg/video.svg" alt="video icon">
-                    <p>Video shooting</p>
-                    <p>Capture your moments so that they always stay with you</p>
-                </div>
-                <div class="skills-item-3">
-                    <img src="./assets/svg/picture.svg" alt="picture icon">
-                    <p>Retouch</p>
-                    <p>I strive to make photography surpass reality</p>
-                </div>
-                <div class="skills-item-4">
-                    <img src="./assets/svg/mic.svg" alt="mic icon">
-                    <p>Audio</p>
-                    <p>Professional sounds recording for video, advertising, portfolio</p>
+
+                <div class="items">
+                    <div class="skill-item">
+                        <div class="icon-skills"><img src="./assets/svg/camera.svg" alt="camera icon" width="62px" height="50px"></div>
+                        <div class="header-skills"><p>Digital photography</p></div>
+                        <div class="description-skills"><p>High-quality photos in the studio and on the nature</p></div>
+                    </div>
+
+                    <div class="skill-item">
+                        <div class="icon-skills"><img src="./assets/svg/video.svg" alt="video icon" width="60px" height="50px"></div>
+                        <div class="header-skills"><p>Video shooting</p></div>
+                        <div class="description-skills"><p>Capture your moments so that they always stay with you</p></div>
+                    </div>
+
+                    <div class="skill-item">
+                        <div class="icon-skills"><img src="./assets/svg/picture.svg" alt="picture icon" width="66px" height="50px"></div>
+                        <div class="header-skills"><p>Retouch</p></div>
+                        <div class="description-skills"><p>I strive to make photography surpass reality</p></div>
+                    </div>
+
+                    <div class="skill-item">
+                        <div class="icon-skills"><img src="./assets/svg/mic.svg" alt="mic icon" width="32px" height="50px"></div>
+                        <div class="header-skills"><p>Audio</p></div>
+                        <div class="description-skills"><p>Professional sounds recording for video, advertising, portfolio</p></div>
+                    </div>
                 </div>
             </section>
 
+
             <section class="portfolio">
-                <h2 class="section-title">Portfolio</h2>
+                <div class="section-title">
+                    <h2 class="text-title-2">Portfolio</h2>
+                </div>
+
+                <div class="potfolio-buttons">
+                    <button>Autumn</button>
+                    <button>Summer</button>
+                    <button>Spring</button>
+                    <button>Winter</button>
+                </div>
+
+                <div class="exemples-photo">
+                    <img src="./assets/img/portfolio-img1.jpg">
+                    <img src="./assets/img/portfolio-img2.jpg">
+                    <img src="./assets/img/portfolio-img3.jpg">
+                    <img src="./assets/img/portfolio-img4.jpg">
+                    <img src="./assets/img/portfolio-img5.jpg">
+                    <img src="./assets/img/portfolio-img6.jpg">
+                </div>
             </section>
+
             <section class="video">
-                <h2 class="section-title">Video</h2>
+                <div class="section-title">
+                    <h2 class="text-title-3">Video</h2>
+                </div> 
             </section>
+
             <section class="price">
-                <h2 class="section-title">Price</h2>
+                <div class="section-title">
+                    <h2 class="text-title-4">Price</h2>
+                </div>
             </section>
+
             <section class="contacts">
-                <h2 class="section-title">Contacts</h2>
+                <div class="section-title">
+                    <h2 class="text-title-5">Contact me</h2>
+                </div> 
             </section>
         </div>
     </main>
+
     <footer class="footer-container">
         <div class="container">
             <p><b>&copy; 2022</b></p>
         </div>
     </footer>
+
     <script src="./index.js"></script>
+
 </body>
 </html>
