feat: add sections video and price

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                 </div>
 
                 <div class="potfolio-buttons">
-                    <button>Autumn</button>
-                    <button>Summer</button>
-                    <button>Spring</button>
-                    <button>Winter</button>
+                    <button class="button-4">Autumn</button>
+                    <button class="button-3">Summer</button>
+                    <button class="button-2">Spring</button>
+                    <button class="button-1">Winter</button>
                 </div>
 
                 <div class="exemples-photo">
@@ -97,6 +97,10 @@
             <section class="video">
                 <div class="section-title">
                     <h2 class="text-title-3">Video</h2>
+                </div>
+
+                <div class="video-player">
+                    <img src="./assets/img/video-player.jpg" alt="video-player">
                 </div> 
             </section>
 
@@ -104,6 +108,64 @@
                 <div class="section-title">
                     <h2 class="text-title-4">Price</h2>
                 </div>
+
+                <div class="price-cards">
+                    <div class="cards">
+                        <div class="tarif-name"><p>Standard</p></div>
+
+                        <div class="cost"><p>500</p></div>
+
+                        <div class="description-tarif">
+                            <p>One location</p>
+                            <p>120 photos in color</p>
+                            <p>12 photos in retouch</p>
+                            <p>Readiness 2-3 weeks</p>
+                            <p>Make up, visage</p>
+                        </div>
+
+                        <div class="order-button">
+                            <p class="order-button-text">Order shooting</p>
+                        </div>
+                    </div>
+
+                    <div class="cards">
+                        <div class="tarif-name"><p>Premium</p></div>
+
+                        <div class="cost"><p>700</p></div>
+
+                        <div class="description-tarif">
+                            <p>One location</p>
+                            <p>120 photos in color</p>
+                            <p>12 photos in retouch</p>
+                            <p>Readiness 2-3 weeks</p>
+                            <p>Make up, visage</p>
+                        </div>
+
+                        <div class="order-button">
+                            <p class="order-button-text">Order shooting</p>
+                        </div>
+                    </div>
+
+                    <div class="cards">
+                        <div class="tarif-name"><p>Gold</p></div>
+
+                        <div class="cost"><p>1000</p></div>
+
+                        <div class="description-tarif">
+                            <p>One location</p>
+                            <p>120 photos in color</p>
+                            <p>12 photos in retouch</p>
+                            <p>Readiness 2-3 weeks</p>
+                            <p>Make up, visage</p>
+                        </div>
+
+                        <div class="order-button">
+                            <p class="order-button-text">Order shooting</p>
+                        </div>
+                    </div>
+                </div>
+
+                
             </section>
 
             <section class="contacts">
