feat: add footer and contacts

--- a/index.html
+++ b/index.html
@@ -111,16 +111,20 @@
 
                 <div class="price-cards">
                     <div class="cards">
-                        <div class="tarif-name"><p>Standard</p></div>
+                        <div class="tarif-name">
+                            <span>Standard</span>
+                        </div>
 
-                        <div class="cost"><p>500</p></div>
+                        <div class="cost">
+                            <span>500</span>
+                        </div>
 
                         <div class="description-tarif">
-                            <p>One location</p>
-                            <p>120 photos in color</p>
-                            <p>12 photos in retouch</p>
-                            <p>Readiness 2-3 weeks</p>
-                            <p>Make up, visage</p>
+                            <p class="tarif-item">One location</p>
+                            <p class="tarif-item">120 photos in color</p>
+                            <p class="tarif-item">12 photos in retouch</p>
+                            <p class="tarif-item">Readiness 2-3 weeks</p>
+                            <p class="tarif-item">Make up, visage</p>
                         </div>
 
                         <div class="order-button">
@@ -134,11 +138,11 @@
                         <div class="cost"><p>700</p></div>
 
                         <div class="description-tarif">
-                            <p>One location</p>
-                            <p>120 photos in color</p>
-                            <p>12 photos in retouch</p>
-                            <p>Readiness 2-3 weeks</p>
-                            <p>Make up, visage</p>
+                            <p class="tarif-item">One location</p>
+                            <p class="tarif-item">120 photos in color</p>
+                            <p class="tarif-item">12 photos in retouch</p>
+                            <p class="tarif-item">Readiness 2-3 weeks</p>
+                            <p class="tarif-item">Make up, visage</p>
                         </div>
 
                         <div class="order-button">
@@ -152,11 +156,11 @@
                         <div class="cost"><p>1000</p></div>
 
                         <div class="description-tarif">
-                            <p>One location</p>
-                            <p>120 photos in color</p>
-                            <p>12 photos in retouch</p>
-                            <p>Readiness 2-3 weeks</p>
-                            <p>Make up, visage</p>
+                            <p class="tarif-item">One location</p>
+                            <p class="tarif-item">120 photos in color</p>
+                            <p class="tarif-item">12 photos in retouch</p>
+                            <p class="tarif-item">Readiness 2-3 weeks</p>
+                            <p class="tarif-item">Make up, visage</p>
                         </div>
 
                         <div class="order-button">
