--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
                         </div>
 
                         <div class="description-tarif">
-                            <p class="tarif-item">One location</p>
-                            <p class="tarif-item">120 photos in color</p>
-                            <p class="tarif-item">12 photos in retouch</p>
-                            <p class="tarif-item">Readiness 2-3 weeks</p>
-                            <p class="tarif-item">Make up, visage</p>
+                            <span class="tarif-item">One location</span>
+                            <span class="tarif-item">120 photos in color</span>
+                            <span class="tarif-item">12 photos in retouch</span>
+                            <span class="tarif-item">Readiness 2-3 weeks</span>
+                            <span class="tarif-item">Make up, visage</span>
                         </div>
 
                         <div class="order-button">
@@ -138,11 +138,11 @@
                         <div class="cost"><p>700</p></div>
 
                         <div class="description-tarif">
-                            <p class="tarif-item">One location</p>
-                            <p class="tarif-item">120 photos in color</p>
-                            <p class="tarif-item">12 photos in retouch</p>
-                            <p class="tarif-item">Readiness 2-3 weeks</p>
-                            <p class="tarif-item">Make up, visage</p>
+                            <span class="tarif-item">One location</span>
+                            <span class="tarif-item">120 photos in color</span>
+                            <span class="tarif-item">12 photos in retouch</span>
+                            <span class="tarif-item">Readiness 2-3 weeks</span>
+                            <span class="tarif-item">Make up, visage</span>
                         </div>
 
                         <div class="order-button">
@@ -156,11 +156,11 @@
                         <div class="cost"><p>1000</p></div>
 
                         <div class="description-tarif">
-                            <p class="tarif-item">One location</p>
-                            <p class="tarif-item">120 photos in color</p>
-                            <p class="tarif-item">12 photos in retouch</p>
-                            <p class="tarif-item">Readiness 2-3 weeks</p>
-                            <p class="tarif-item">Make up, visage</p>
+                            <span class="tarif-item">One location</span>
+                            <span class="tarif-item">120 photos in color</span>
+                            <span class="tarif-item">12 photos in retouch</span>
+                            <span class="tarif-item">Readiness 2-3 weeks</span>
+                            <span class="tarif-item">Make up, visage</span>
                         </div>
 
                         <div class="order-button">
